--- a/.env
+++ b/.env
@@ -38,3 +38,12 @@ MAILER_URL=
 # Put here your wheather API KEY
 APIKEY=03fc91b69041ec17ddd9bf2fa4f58597
 ###< app ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
